dev/test_programs/INVALID/group1/typedec4.go
package main;

struct{
	x int;
}
